--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-<img src="./images/krn.png" width=100 height=100 hspace=300 align=right>
+<img src="./images/krn.PNG" width=100 height=100 hspace=300 align=right>
   <title>Karan Kumar K</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="./css/style.css">
